--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,9 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
-    font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  font-weight: normal;
+  color: #38499E;
 }
 
+/*Dropdown customization*/
+
+.Select-placeholder {
+  background-color: #f7f7e6;
+  color: #38499E;
+}
+
+.Select-control {
+  color: #38499E;
+  cursor: not-allowed;
+  border-width: medium;
+  border-color: #38499E;
+}
+
+.is-focused:not(.is-open) > .Select-control {
+  border-width: medium;
+  border-color: #38499E;
+}
+
+.is-focused > .Select-control {
+  border-width: medium;
+  border-color: #38499E;
+}
+
+.Select-value-label {
+  color: #38499E !important;
+}
+.Select-menu-outer {
+  position: absolute;
+  background-color: #f7f7e6;
+  min-width: 160px;
+  color: #38499E;
+  /*z-index: 1;*/
+  border: none;
+  box-shadow: none;
+}
+
+/*Font options*/
 .poppins-thin {
   font-family: "Poppins", sans-serif;
   font-weight: 100;
@@ -110,4 +151,24 @@
   font-family: "Poppins", sans-serif;
   font-weight: 900;
   font-style: italic;
+}
+
+/*Div Customization*/
+.first-plots {
+  width: 80%;
+  border: #38499E solid thick;
+  margin-top: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 2%;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.energy-hist-flex-box {
+  display: flex;
+  align-content: center;
+  flex-direction: row;
+  margin-left: auto;
+  margin-right: auto;
 }
