--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -155,13 +155,13 @@
 
 /*Div Customization*/
 .first-plots {
-  width: 80%;
-  border: #38499E solid thick;
+  width: 90%;
+  /*border: #38499E solid thick;*/
   margin-top: 5%;
   margin-left: auto;
   margin-right: auto;
   padding-top: 2%;
-  border-radius: 10px;
+  /*border-radius: 10px;*/
   text-align: center;
 }
 
@@ -171,4 +171,14 @@
   flex-direction: row;
   margin-left: auto;
   margin-right: auto;
+}
+
+.footer {
+  background-color: #38499E;
+  color: #f7f7e6;
+  height: 100px;
+  line-height: 100px;
+  white-space: nowrap;
+  display: flex;
+  align-content: center;
 }
